--- a/casestudies/109/casestudy/www/layout/case_id_109_id_214_c_bio.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_214_c_bio.html
@@ -254,19 +254,10 @@ font-style:italic;
 	<strong>David Leigh</strong> was the <em>Guardian</em>&#39;s investigations editor, as well as a professor of reporting at City University in London and a producer at the television investigative program, World in Action. Leigh has written books on the intelligence services, drug smuggling and freedom of information. He was best known for his part the perjury conviction of Conservative Cabinet Minister Jonathan Aitken.</p>
 <p>
 	<i>Listen to Leigh talk about vacationing with the cables.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/182/Leigh&#32;bio&#32;quote.mp3" /> -->
+	<!-- img alt="" border="0" class="audiofile" src="../../files/audios/182/Leigh&#32;bio&#32;quote.mp3" /-->
 	<audio controls>
       <source src="../../files/audios/182/Leigh&#32;bio&#32;quote.mp3" type="audio/mpeg">
     </audio>
-</p>
-
-<p>
- <b>Test Audio</b>
- <!-- <img alt="" border="0" class="audiofile" src="../../files/audios/182/Leigh&#32;bio&#32;quote.mp3" /> -->
- <audio controls>
-  <source src="../../files/audios/182/Leigh&#32;bio&#32;quote.mp3" type="audio/mpeg">
- </audio>
-
 </p>
 
 </div>
