--- a/casestudies/15/casestudy/www/layout/case_id_15_id_20_c_bio.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_20_c_bio.html
@@ -273,7 +273,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Aldam discuss how to keep the paper's audience.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 24 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/seg2_mark_rex_edit.mp3" class="audiofile" alt="" /></p></div>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/seg2_mark_rex_edit.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/seg2_mark_rex_edit.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
