--- a/casestudies/15/casestudy/www/layout/case_id_15_id_21_c_bio.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_21_c_bio.html
@@ -273,7 +273,9 @@ font-style:italic;
 <h2>Audio</h2>
 <p><em>Listen to Gleason's reaction to mapping the process.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 25 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/mat_fran_gleason_reaction_to_maps.mp3" /></p>
+<!--img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/mat_fran_gleason_reaction_to_maps.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/mat_fran_gleason_reaction_to_maps.mp3" type="audio/mpeg"></audio>
+</p>
 <p>&nbsp;</p></div>
       </div>
 				</div><!-- id="main" -->
