--- a/casestudies/16/casestudy/www/layout/case_id_16_id_28_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_28_c_bio.html
@@ -283,7 +283,10 @@ font-style:italic;
 <p>A graduate of Yale, Gibbs also studied politics and philosophy as a Marshall scholar at Oxford University.</p>
 <h2>Audio</h2>
 <p><em>Listen to Gibbs talk about the &ldquo;American Mirror.&rdquo;</em></p>
-<p><img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/gibbs_american_mirror.mp3" /></p>
+<p>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/gibbs_american_mirror.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/gibbs_american_mirror.mp3" type="audio/mpeg"></audio>
+</p>
 <p><strong>Length:</strong> 3 min 27 sec</p></div>
       </div>
 				</div><!-- id="main" -->
