--- a/casestudies/17/casestudy/www/layout/case_id_17_id_33_c_bio.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_33_c_bio.html
@@ -247,7 +247,9 @@ font-style:italic;
 <h2>Audio</h2>
 <p><em>Listen to McHenry on innovation at the paper.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 24 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/McHenry_bio.mp3" class="audiofile" alt="" /></p></div>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/McHenry_bio.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/McHenry_bio.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
