--- a/casestudies/19/casestudy/www/layout/case_id_19_id_44_c_bio.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_44_c_bio.html
@@ -239,7 +239,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Cindy McCurry-Ross discuss the future of First Amendment journalism.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 13 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20bio.mp3" class="audiofile" alt="" /></p></div>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20bio.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20bio.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
