--- a/casestudies/23/casestudy/www/layout/case_id_23_id_95_c_bio.html
+++ b/casestudies/23/casestudy/www/layout/case_id_23_id_95_c_bio.html
@@ -309,7 +309,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><i>Listen to Maines discuss the opportunities and risks of data analysis.</i><br />
 <span class="footnoteslength"><b>Length:</b> 65 sec</span><br />
-<img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/maines_bio.mp3" alt="" /></p></div>
+<!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/maines_bio.mp3" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/maines_bio.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
