--- a/casestudies/24/casestudy/www/layout/case_id_24_id_72_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_72_c_bio.html
@@ -337,7 +337,9 @@ font-style:italic;
     <div class="content"><p><span class="inline inline-left"><img width="130" height="150" alt="" src="../../files/csm/images/bio_ingwerson.jpg" class="image image-_original" /></span>Marshall Ingwerson became managing editor of the <i>Christian Science Monitor</i> in 1999. As a longtime reporter, he was based in Moscow, Washington, DC, Miami, Los Angeles, and Boston. He covered the White House during the George H.W. Bush and Clinton administrations, and the Russian White House during the Yeltsin administration. His articles on the oil boom in the Caspian Sea earned an Overseas Press Club citation for 1997.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Ingwerson describe his duties as managing editor.</i></span><span class="footnoteslength"><b>Length:</b> 40 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_marshall_ingwerson.mp3" class="audiofile" /></p></div>
+<!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_marshall_ingwerson.mp3" class="audiofile" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_marshall_ingwerson.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
