--- a/casestudies/24/casestudy/www/layout/case_id_24_id_79_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_79_c_bio.html
@@ -338,7 +338,9 @@ font-style:italic;
 <p>Simon began his career as a writer and photographer based in Central America, focusing on Guatemala&rsquo;s civil war. He holds a master&rsquo;s degree in Latin American studies from Stanford University. In 1989&ndash;91 he worked as a journalist in Mexico, then moved to San Francisco in 1991&ndash;94, where he was a contributing editor to <i>SF Weekly</i>. He returned to Mexico in 1994&ndash;97, and covered such events as the Zapatista uprising in Chiapas and the peso devaluation.</p>
 <h3>Audio</h3>
 <p><span class="audioprompt"><i>Listen to Simon discuss his decision to join CPJ.</i></span><span class="footnoteslength"><b>Length:</b> 33 sec</span><br />
-<img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_simon.mp3" alt="" /></p></div>
+<!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_simon.mp3" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_simon.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
