--- a/casestudies/1/casestudy/www/layout/case_id_1_id_1_c_bio.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_1_c_bio.html
@@ -276,7 +276,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Chan talk about the international media&rsquo;s record of capitulating to Singapore.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 49 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Ying%20Chan%20bio%20clip_lev.mp3" /></p></div>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Ying%20Chan%20bio%20clip_lev.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Ying%20Chan%20bio%20clip_lev.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
