--- a/casestudies/109/casestudy/www/layout/case_id_109_id_215_c_bio.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_215_c_bio.html
@@ -254,7 +254,9 @@ font-style:italic;
 	<strong>Alan Rusbridger </strong>became editor of the <em>Guardian</em> in 1995. He first joined the paper in 1979 as a general assignment reporter, feature writer and columnist. He briefly moved to the sister paper, the <em>Observer</em>, followed by a stint as Washington correspondent for the London <em>Daily News</em>. He returned to the <em>Guardian</em> as a feature writer in 1987. He helped to launch the earliest version of what would become the online news website guardian.co.uk. Rusbridger has been named editor of the year three times.</p>
 <p>
 	<i>Listen to Rusbridger discuss keeping the project together.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/185/Rusbridger&#32;bio&#32;quote.mp3" /></p>
+	<!-- img alt="" border="0" class="audiofile" src="../../files/audios/185/Rusbridger&#32;bio&#32;quote.mp3" /-->
+    <audio controls><source src="../../files/audios/185/Rusbridger&#32;bio&#32;quote.mp3" type="audio/mpeg"></audio>
+    </p>
 </div>
       </div>
 				</div><!-- id="main" -->
