--- a/casestudies/15/casestudy/www/layout/case_id_15_id_22_c_bio.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_22_c_bio.html
@@ -274,7 +274,10 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Hearst&rsquo;s thoughts on who will win in the newspaper industry.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 45 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/george_hearst_my_belief_is.mp3" /></p></div>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/george_hearst_my_belief_is.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/george_hearst_my_belief_is.mp3" type="audio/mpeg"></audio>
+</p></div>
+
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
