--- a/casestudies/15/casestudy/www/layout/case_id_15_id_25_c_bio.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_25_c_bio.html
@@ -273,7 +273,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Spain discuss life without a CMS system.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 57 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/mike_spain_TU_Oct_17_07_edit.mp3" /></p></div>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/mike_spain_TU_Oct_17_07_edit.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/mike_spain_TU_Oct_17_07_edit.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
