--- a/casestudies/16/casestudy/www/layout/case_id_16_id_29_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_29_c_bio.html
@@ -283,7 +283,10 @@ font-style:italic;
 <p>Kelly's career at <em>Time </em>began in 1978. He served as foreign editor during the first Gulf War and the fall of the Soviet Union, became deputy managing editor in 1996, and rose to the position of managing editor in 2001.</p>
 <h2>Audio</h2>
 <p><em>Listen to Kelly discuss the covers of</em><em> </em>Time <em>magazine.</em></p>
-<p><img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/kelly_covers.mp3" /></p>
+<p>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/kelly_covers.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/kelly_covers.mp3" type="audio/mpeg"></audio>
+</p>
 <p><strong>Length:</strong> 2 min 10 sec</p></div>
       </div>
 				</div><!-- id="main" -->
