--- a/casestudies/2/casestudy/www/layout/case_id_2_id_16_c_bio.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_16_c_bio.html
@@ -275,7 +275,9 @@ font-style:italic;
 <h3 style="clear: both;">Audio</h3>
 <p><em>Listen to Baxt on how a producer narrows down the story.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 3 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Baxt_bio_clip.mp3" /></p></div>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Baxt_bio_clip.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Baxt_bio_clip.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
