--- a/casestudies/2/casestudy/www/layout/case_id_2_id_18_c_bio.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_18_c_bio.html
@@ -276,7 +276,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Fanning on his job responsibilities.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 11 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_bio_clip.mp3" /></p></div>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_bio_clip.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Fanning_bio_clip.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
