--- a/casestudies/2/casestudy/www/layout/case_id_2_id_19_c_bio.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_19_c_bio.html
@@ -276,7 +276,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Wiley on his job as executive editor.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 17 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Wiley_bio_clip.mp3" class="audiofile" alt="" /></p></div>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Wiley_bio_clip.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Wiley_bio_clip.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
