--- a/casestudies/20/casestudy/www/layout/case_id_20_id_48_c_bio.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_48_c_bio.html
@@ -229,7 +229,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Jeff Cull describe the early phases of covering the Cape Coral utility expansion.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 57 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20bio.mp3" class="audiofile" alt="" /></p></div>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20bio.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20bio.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
