--- a/casestudies/20/casestudy/www/layout/case_id_20_id_50_c_bio.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_50_c_bio.html
@@ -230,7 +230,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Hudler discuss legal issues surrounding news-press.com forums.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 59 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Carol%20Hudler%20bio.mp3" /></p></div>
+<!-- <img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Carol%20Hudler%20bio.mp3" /> -->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Carol%20Hudler%20bio.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
