--- a/casestudies/20/casestudy/www/layout/case_id_20_id_54_c_bio.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_54_c_bio.html
@@ -229,7 +229,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Mackenzie Warren explain the pace of newsroom innovation.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 59 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Mackenzie%20Warren%20bio.mp3" /></p></div>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Mackenzie%20Warren%20bio.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Mackenzie%20Warren%20bio.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
