--- a/casestudies/22/casestudy/www/layout/case_id_22_id_63_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_63_c_bio.html
@@ -320,7 +320,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><i>Listen to Byford on single sourcing:</i><br />
 <span class="footnoteslength"><b>Length:</b> 18 sec</span><br />
-<img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_single_sourcing.mp3" alt="" /></p></div>
+<!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_single_sourcing.mp3" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_single_sourcing.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
