--- a/casestudies/22/casestudy/www/layout/case_id_22_id_68_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_68_c_bio.html
@@ -319,7 +319,9 @@ font-style:italic;
 <h3>Audio</h3>
 <p><i>Listen to Sambrook on editorial decisionmaking at the BBC:</i><br />
 <span class="footnoteslength"><b>Length:</b> 25 sec</span><br />
-<img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/sambrook_editorial_decisionmaking.mp3" alt="" /></p></div>
+<!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/sambrook_editorial_decisionmaking.mp3" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/sambrook_editorial_decisionmaking.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
