--- a/casestudies/24/casestudy/www/layout/case_id_24_id_69_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_69_c_bio.html
@@ -338,7 +338,9 @@ font-style:italic;
 <p>A 1970 graduate of Principia College in Elsah, Ill., Bergenheim held a master&rsquo;s degree from the Shakespeare Institute at England&rsquo;s University of Birmingham. He passed away in July 2008.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Bergenheim discuss covering news in dangerous regions.</i></span><span class="footnoteslength"><b>Length:</b> 1 min 55 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_burgenheim.mp3" class="audiofile" /></p></div>
+<!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_burgenheim.mp3" class="audiofile" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_burgenheim.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
