--- a/casestudies/24/casestudy/www/layout/case_id_24_id_70_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_70_c_bio.html
@@ -338,7 +338,9 @@ font-style:italic;
 <p>Campagna has lived and studied in Egypt where he attended the American University in Cairo&rsquo;s intensive Arabic language program. He holds a master&rsquo;s degree in international affairs from Columbia University&rsquo;s School of International and Public Affairs, and a bachelor&rsquo;s degree in Middle East Studies from Fordham University.</p>
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Campagna describe what CPJ does.</i></span><b><span class="footnoteslength"><b>Length:</b> 1 min 41 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_campagna.mp3" class="audiofile" /></p></div>
+<!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_campagna.mp3" class="audiofile" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_campagna.mp3" type="audio/mpeg"></audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
