--- a/casestudies/115/casestudy/www/layout/case_id_115_id_231_c_bio.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_231_c_bio.html
@@ -4,7 +4,7 @@
   <title>
    Biography: Michael Rezendes | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
-  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <style media="all" type="text/css">
    @import "css_global/book/book.css";
@@ -137,7 +137,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston Globe— una breve historia
+          Boston GlobeÂ— una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La “ciudad más católica”
+          La Â“ciudad más católicaÂ”
          </a>
         </li>
         <li class="leaf">
