--- a/casestudies/124/casestudy/www/layout/case_id_124_id_242_c_bio.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_242_c_bio.html
@@ -2,10 +2,10 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Biography: Marc Levy | Côte Sud Initiative: Integrated Development in Haiti
+   Biography: Marc Levy | CÃ´te Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -204,7 +204,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Marc Levy
+       Biography: MarcÂ Levy
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -214,7 +214,7 @@ font-style:italic;
          <img src="../../files/photos/821/Marc.jpg" style="height: 206px; width: 250px;"/>
         </div>
         <p>
-         Marc Levy was deputy director of the Center for International Earth Science Information Network (CIESIN) at Columbia University’s Earth Institute and an adjunct professor at Columbia’s School of International and Public Affairs. CIESIN collected and analyzed interdisciplinary data related to people and the environment, and integrated the information with geospatial data. Levy was also chair of the World Economic Forum Global Agenda Council on Measuring Sustainability; lead author of the Human Security chapter of the Intergovernmental Panel on Climate Change’s Fifth Assessment Report, Working Group II; and a member of the US government’s Political Instability Task Force.
+         Marc Levy was deputy director of the Center for International Earth Science Information Network (CIESIN) at Columbia UniversityÂ’s Earth Institute and an adjunct professor at ColumbiaÂ’s School of International and Public Affairs. CIESIN collected and analyzed interdisciplinary data related to people and the environment, and integrated the information with geospatial data. Levy was also chair of the World Economic Forum Global Agenda Council on Measuring Sustainability; lead author of the Human Security chapter of the Intergovernmental Panel on Climate ChangeÂ’s Fifth Assessment Report, Working Group II; and a member of the US governmentÂ’s Political Instability Task Force.
         </p>
         <blockquote>
          <p>
@@ -242,17 +242,17 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a href="case_id_124_id_241_c_bio.html">
-          Tatiana Wah
+          TatianaÂ Wah
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_124_id_242_c_bio.html">
-          Marc Levy
+          MarcÂ Levy
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_124_id_243_c_bio.html">
-          Alex Fischer
+          AlexÂ Fischer
          </a>
         </li>
        </ul>
@@ -275,7 +275,7 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a href="http://www.journalism.columbia.edu">
-          © 2012 Columbia University Graduate School of Journalism
+          Â© 2012 Columbia University Graduate School of Journalism
          </a>
         </li>
        </ul>
