--- a/casestudies/124/casestudy/www/layout/case_id_124_id_243_c_bio.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_243_c_bio.html
@@ -2,10 +2,10 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Biography: Alex Fischer | Côte Sud Initiative: Integrated Development in Haiti
+   Biography: Alex Fischer | CÃ´te Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -204,7 +204,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Alex Fischer
+       Biography: AlexÂ Fischer
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -214,7 +214,7 @@ font-style:italic;
          <img src="../../files/photos/820/Alex.jpg" style="width: 250px; height: 252px;"/>
         </div>
         <p>
-         Alex Fischer was associate director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia University’s Earth Institute. In this capacity, he served as a technical advisor to the Haitian government’s E-Governance Office.
+         Alex Fischer was associate director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia UniversityÂ’s Earth Institute. In this capacity, he served as a technical advisor to the Haitian governmentÂ’s E-Governance Office.
         </p>
         <p>
          <i>
@@ -240,17 +240,17 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a href="case_id_124_id_241_c_bio.html">
-          Tatiana Wah
+          TatianaÂ Wah
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_124_id_242_c_bio.html">
-          Marc Levy
+          MarcÂ Levy
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_124_id_243_c_bio.html">
-          Alex Fischer
+          AlexÂ Fischer
          </a>
         </li>
        </ul>
@@ -273,7 +273,7 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a href="http://www.journalism.columbia.edu">
-          © 2012 Columbia University Graduate School of Journalism
+          Â© 2012 Columbia University Graduate School of Journalism
          </a>
         </li>
        </ul>
