--- a/casestudies/43/casestudy/www/layout/case_id_43_id_125_c_bio.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_125_c_bio.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Biography: Alberto Ibargüen | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Biography: Alberto Ibarg&uuml;en | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -99,7 +99,7 @@ font-style:italic;
        <h1 class="site-name">
         <a href="case_id_43.html" title="Home">
          <span>
-          Biography: Alberto Ibargüen
+          Biography: Alberto Ibarg&uuml;en
          </span>
         </a>
        </h1>
@@ -140,7 +140,7 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -235,7 +235,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Alberto Ibargüen
+       Biography: Alberto Ibarg&uuml;en
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -245,7 +245,7 @@ font-style:italic;
          <img alt="" src="../../files/photos/377/ibarguen.jpg"/>
         </div>
         <p>
-         Alberto Ibargüen became president and CEO of the John S. and James L. Knight Foundation in mid-2006. Before that, he was publisher of the
+         Alberto Ibarg&uuml;en became president and CEO of the John S. and James L. Knight Foundation in mid-2006. Before that, he was publisher of the
          <i>
           Miami Herald
          </i>
@@ -253,10 +253,10 @@ font-style:italic;
          <i>
           El Nuevo Herald
          </i>
-         . During his tenure, TMH won three Pulitzer Prizes and ENH won Spain’s Ortega y Gasset Prize for excellence in journalism.
+         . During his tenure, TMH won three Pulitzer Prizes and ENH won Spain's Ortega y Gasset Prize for excellence in journalism.
         </p>
         <p>
-         He studied at Wesleyan University and the University of Pennsylvania Law School. Between college and law school, he served in the Peace Corps in Venezuela’s Amazon Territory and in Colombia. He practiced law in Hartford, Connecticut until he joined the Hartford
+         He studied at Wesleyan University and the University of Pennsylvania Law School. Between college and law school, he served in the Peace Corps in Venezuela's Amazon Territory and in Colombia. He practiced law in Hartford, Connecticut until he joined the Hartford
          <i>
           Courant
          </i>
@@ -268,12 +268,12 @@ font-style:italic;
         </p>
         <p>
          <span>
-          For his work to protect journalists in Latin America as part of the Inter American Press Association, Ibargüen received a Maria Moors Cabot citation from Columbia University and George Washington University awarded him an honorary Doctor of Letters.
+          For his work to protect journalists in Latin America as part of the Inter American Press Association, Ibarg&uuml;en received a Maria Moors Cabot citation from Columbia University and George Washington University awarded him an honorary Doctor of Letters.
          </span>
         </p>
         <p>
          <i>
-          Listen to Ibargüen about his background.
+          Listen to Ibarg&uuml;en about his background.
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/104/Ibarguen bio.mp3"/>-->
@@ -295,32 +295,32 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a class="active" href="case_id_43_id_125_c_bio.html">
-          Alberto Ibargüen
+          Alberto Ibarg&uuml;en
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_126_c_bio.html">
-          Humberto Castelló
+          Humberto Castell&oacute;
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_127_c_bio.html">
-          Howard Weaver
+          Howard Weaver
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_128_c_bio.html">
-          Oscar Corral
+          Oscar Corral
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_129_c_bio.html">
-          Wilfredo Cancio Isla
+          Wilfredo Cancio Isla
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_130_c_bio.html">
-          Tom Fiedler
+          Tom Fiedler
          </a>
         </li>
        </ul>
