--- a/casestudies/43/casestudy/www/layout/case_id_43_id_126_c_bio.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_126_c_bio.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Biography: Humberto Castelló | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Biography: Humberto Castell&oacute; | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -99,7 +99,7 @@ font-style:italic;
        <h1 class="site-name">
         <a href="case_id_43.html" title="Home">
          <span>
-          Biography: Humberto Castelló
+          Biography: Humberto Castell&oacute;
          </span>
         </a>
        </h1>
@@ -140,12 +140,12 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_468.html">
-          Castañeda era
+          Casta&ntilde;eda era
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -235,7 +235,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Humberto Castelló
+       Biography: Humberto Castell&oacute;
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -303,7 +303,7 @@ div.Section1
          </img>
         </div>
         <p>
-         Humberto Castelló became editor of the Spanish-language daily,
+         Humberto Castell&oacute; became editor of the Spanish-language daily,
          <i>
           El Nuevo Herald
          </i>
@@ -313,21 +313,21 @@ div.Section1
          </i>
          in 1997, and had worked most recently as deputy editor. Before that, he had worked for several years for
          <i>
-          El Nuevo Día
+          El Nuevo D&iacute;a
          </i>
          in Puerto Rico, as well as for an Argentine newspaper.
         </p>
         <p>
-         Announcing Castelló’s appointment, Publisher Alberto Ibargüen said: “He is someone who instead of talking about something, does it. He knows how to take risks in an intelligent way.”
+         Announcing Castell&oacute;s appointment, Publisher Alberto Ibarg&uuml;en said: "He is someone who instead of talking about something, does it. He knows how to take risks in an intelligent way."
         </p>
         <p>
          <span>
-          Castelló was born in Havana, and left Cuba at age 24 for Puerto Rico, where he earned degrees in art and sociology.
+          Castell&oacute; was born in Havana, and left Cuba at age 24 for Puerto Rico, where he earned degrees in art and sociology.
          </span>
         </p>
         <p>
          <i>
-          Listen to Castelló about the three journalists.
+          Listen to Castell&oacute; about the three journalists.
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/105/Castello bio.mp3"/>-->
@@ -349,32 +349,32 @@ div.Section1
        <ul class="menu">
         <li class="leaf">
          <a href="case_id_43_id_125_c_bio.html">
-          Alberto Ibargüen
+          Alberto Ibarg&uuml;en
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_43_id_126_c_bio.html">
-          Humberto Castelló
+          Humberto Castell&oacute;
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_127_c_bio.html">
-          Howard Weaver
+          Howard Weaver
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_128_c_bio.html">
-          Oscar Corral
+          Oscar Corral
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_129_c_bio.html">
-          Wilfredo Cancio Isla
+          Wilfredo Cancio Isla
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_130_c_bio.html">
-          Tom Fiedler
+          Tom Fiedler
          </a>
         </li>
        </ul>
