--- a/casestudies/43/casestudy/www/layout/case_id_43_id_129_c_bio.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_129_c_bio.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Biography: Wilfredo Cancio Isla | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Biography: Wilfredo Cancio Isla | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -140,7 +140,7 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -235,7 +235,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Wilfredo Cancio Isla
+       Biography: Wilfredo Cancio Isla
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -305,7 +305,7 @@ div.Section1
          <i>
           El Nuevo Herald
          </i>
-         as a fulltime staff member in December 1998. His assignment was to report on Cuban exile affairs and politics. He first appeared on Radio Martí in 2000 as part of a discussion panel. In 2001, the broadcaster engaged Cancio for 20 minutes a week to discuss films on a new program,
+         as a fulltime staff member in December 1998. His assignment was to report on Cuban exile affairs and politics. He first appeared on Radio Mart&iacute; in 2000 as part of a discussion panel. In 2001, the broadcaster engaged Cancio for 20 minutes a week to discuss films on a new program,
          <i>
           Commentarios
          </i>
@@ -338,32 +338,32 @@ div.Section1
        <ul class="menu">
         <li class="leaf">
          <a href="case_id_43_id_125_c_bio.html">
-          Alberto Ibargüen
+          Alberto Ibarg&uuml;en
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_126_c_bio.html">
-          Humberto Castelló
+          Humberto Castell&oacute;
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_127_c_bio.html">
-          Howard Weaver
+          Howard Weaver
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_128_c_bio.html">
-          Oscar Corral
+          Oscar Corral
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_43_id_129_c_bio.html">
-          Wilfredo Cancio Isla
+          Wilfredo Cancio Isla
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_130_c_bio.html">
-          Tom Fiedler
+          Tom Fiedler
          </a>
         </li>
        </ul>
